tests/integration/snapshots/integration__conformance__y_string_unicode_escaped_double_quote.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\u0022"]
stdout ---
[
  "\u0022"
]

stderr ---
