tests/integration/snapshots/integration__conformance__y_string_unicode_u+10fffe_nonchar.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
["\uDBFF\uDFFE"]
stderr ---
