tests/integration/snapshots/integration__conformance__y_string_unicode_u+1fffe_nonchar.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\uD83F\uDFFE"]
stdout ---
["\uD83F\uDFFE"]

stderr ---
