tests/integration/snapshots/integration__conformance__y_string_unicode_u+200b_zero_width_space.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u200B"]
stdout ---
["\u200B"]

stderr ---
