tests/integration/snapshots/integration__conformance__y_string_unicode_u+2064_invisible_plus.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u2064"]
stdout ---
["\u2064"]

stderr ---
