tests/integration/snapshots/integration__conformance__y_string_unicode_u+2064_invisible_plus.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
["\u2064"]
stderr ---
