tests/integration/snapshots/integration__conformance__y_string_unicode_u+fdd0_nonchar.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\uFDD0"]
stdout ---
["\uFDD0"]

stderr ---
