tests/integration/snapshots/integration__conformance__y_string_unicode_u+fdd0_nonchar.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uFDD0"]
stdout ---
["\uFDD0"]

stderr ---
